# HytaleNodeEditor

./: .gitignore  Cargo.toml  README.md
doc/: internals.md
src/: app.rs  main.rs
src/editor/: connection.rs  mod.rs  node.rs  striped_button.rs  value.rs  viewer.rs
src/editor/menu/: default_context.rs  mod.rs  node_context.rs
src/generator/: biome.rs  common.rs  mod.rs  nodes_v1.rs  nodes_v2.rs  norm.rs
src/nodes/: groups.rs  mod.rs  schema.rs
src/workspace/: color.rs  content.rs  groups.rs  mod.rs  nodes.rs  schemas.rs  workspace.rs
