[package]
name = "HyNodeEditor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.3"
egui = "0.33.3"
egui-snarl = "0.9.0"
egui_extras = "0.33.3"
env_logger = "0.11.8"
log = "0.4.29"
ouroboros = "0.18.5"
serde = "1.0.228"
serde-aux = "4.7.0"
serde_json = "1.0.149"
serde_with = "3.16.1"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
